Fix letter spacing bug

--- a/styles.css
+++ b/styles.css
@@ -76,13 +76,9 @@
   width: 25%;
 }
 
-.category-1,
-.category-2,
-.category-3,
-.category-4 {
+.categories {
   font-size: 1.25rem;
   font-weight: 500;
-  letter-spacing: 1px;
 }
 
 .category-1 {
@@ -117,6 +113,7 @@ li {
   background-color: #0c2743;
   font-weight: 600;
   letter-spacing: 6px;
+  transition: all 500ms ease;
 }
 
 .scores:hover {
